# claude-webdav-sync-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
commands/: configure.md  pull.md  push.md  status.md
hooks/: hooks.json
scripts/: install.sh  requirements.txt  webdav_sync.py
src/webdav_sync/: __init__.py  archiver.py  cli.py  config.py  conflict_resolver.py  sync_manager.py  webdav_client.py
tests/: __init__.py  conftest.py  test_archiver.py  test_cli.py  test_config.py  test_conflict_resolver.py  test_integration.py  test_sync_manager.py  test_webdav_client.py
